# ads131m

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml
.github/workflows/: build.yml
src/: config.rs  device.rs  error.rs  ic.rs  int.rs  interface.rs  lib.rs  register.rs  registers.rs  sample_grab.rs  serde_support.rs  spi.rs  types.rs
