[package]
name = "ads131m"
version = "0.0.2"
authors = ["Kinnon McAlister <kinnonmcalister@gmail.com>"]
repository = "https://github.com/eloc3147/ads131m"
license = "MIT OR Apache-2.0"
description = "Rust driver for the Texas Instruments ADS131M series of simultaneously sampling 24-bit delta-sigma analog-to-digital converters."
readme = "README.md"
keywords = ["adc", "analog", "driver", "spi", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eloc3147/ads131m"
documentation = "https://crouton.net" # TODO: Add docs.rs link
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2021"

[dependencies]
embedded-hal = { version = "0.2.7" }
nb = "1"
num_enum = { version = "0.7", default-features = false, features = [
    "complex-expressions",
] }
crc = "3.0.1"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]
optional = true

[dev-dependencies]
float-cmp = "0.9.0"
enum-iterator = "1.4.1"

[features]
serde = ["dep:serde"]
default = []

[profile.release]
lto = true
